# Environment-EL

./: .env.example  .gitignore  Makefile  README.md  check_verdicts.py  convert_nominatim_to_geojson.py  fetch_lakes_nominatim.py  fetch_lakes_osm.py  generate_mock_data.py  nominatim_lakes.json  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: demo.md  methodology.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AnomalyBadge.tsx  EventList.tsx  LakeList.tsx  LakeMap.tsx  MetricStat.tsx  SatelliteImagery.tsx  ScorePill.tsx  Sidebar.tsx  TrendChart.tsx  VerdictCard.tsx
frontend/src/design/: ds.tsx  icons.tsx  motion.tsx  tokens.css
frontend/src/lib/: api.ts  lakeui.ts  scoring.ts  types.ts
frontend/src/pages/: Cascade.tsx  Compare.tsx  Dashboard.tsx  LakeDetail.tsx  Methodology.tsx  Policies.tsx
outputs/analytics/20260620T140454Z/: all_lakes_monthly.csv  insights_manifest.json  timeseries_manifest.json
outputs/day1/20260619T123039Z/: bangalore_s2_composite.html  run_metadata.json
outputs/day2/20260620T135755Z/: multi_lake_overlay.html  run_manifest.json
src/bangalore_lakes/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
src/bangalore_lakes/analytics/: __init__.py  anomaly.py  indices.py  scoring.py  timeseries.py  verdict.py
src/bangalore_lakes/commands/: __init__.py  _common.py  compute_insights.py  compute_timeseries.py  fetch_lakes.py  hello_bangalore.py
src/bangalore_lakes/data/lakes/: PROVENANCE.md  bangalore_lakes.geojson
src/bangalore_lakes/data/restoration/: restoration_events.json
src/bangalore_lakes/gee/: __init__.py  auth.py  export.py  sentinel2.py  session.py
src/bangalore_lakes/lakes/: __init__.py  models.py  registry.py
src/bangalore_lakes/maps/: __init__.py  render.py
src/bangalore_lakes/restoration/: __init__.py  models.py  registry.py
src/bangalore_lakes/web/: __init__.py  app.py
src/bangalore_lakes/web/static/: site.css
tests/: conftest.py
tests/integration/: test_check_auth.py  test_fetch_lakes.py  test_hello_bangalore.py
tests/unit/: test_analytics_logic.py  test_cli_args.py  test_common.py  test_config.py  test_export.py  test_gee_auth.py  test_lakes_models.py  test_lakes_registry.py  test_logging_setup.py  test_restoration_registry.py  test_web.py
(+21 files in other folders)
