[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bangalore-lakes"
version = "0.1.0"
description = "Satellite-derived water quality prototype for Bangalore's lakes (Day 1 + Day 2 pipeline)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Bangalore Lakes Water Quality" }]
keywords = ["sentinel-2", "google-earth-engine", "water-quality", "bangalore", "remote-sensing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "earthengine-api ~= 1.4",
    "geemap ~= 0.35",
    "geopandas ~= 1.0",
    "typer ~= 0.12",
    "pydantic ~= 2.7",
    "pydantic-settings ~= 2.3",
    "structlog ~= 24.1",
    "tenacity ~= 9.0",
    "requests ~= 2.32",
    "rich ~= 13.7",
]

[project.optional-dependencies]
dev = [
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pytest-mock ~= 3.14",
    "ruff ~= 0.6",
    "black ~= 24.8",
]

[project.scripts]
bangalore-lakes = "bangalore_lakes.cli:app"

[project.urls]
Repository = "https://github.com/dheeran-git/environment-el"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bangalore_lakes.data.lakes" = ["*.geojson", "*.md"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: requires real Google Earth Engine auth (set EE_TEST_AUTH=1 to run)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "C4", "SIM", "RET"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/bangalore_lakes/cli.py" = ["B008"]  # typer.Option() defaults are the Typer idiom
"tests/**" = ["B", "N"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.coverage.run]
branch = true
source = ["bangalore_lakes"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
